# Reinforcement-Learning-based-Control-for-Wet-Shotcreting

./: .gitignore  README.md  pyproject.toml
docs/: TODO.md  algorithm.md  config.md  math.md  process.md  research.md
docs/superpowers/plans/: 2026-05-04-rl-robot-project-refactor.md  2026-05-05-parallel-default-training-alignment.md
docs/superpowers/specs/: 2026-05-04-rl-robot-project-refactor-design.md  2026-05-05-parallel-default-training-alignment-design.md
scripts/: build_reachability_map.py  eval.py  train.py  visualize_rock_env.py
src/: config.py  config.yaml  eval.py  train.py
src/algorithm/: lr_schedule.py  ppo.py  sac.py
src/component/: buffer.py  disturbance.py  planner.py  reachability_map.py  rollout_buffer.py
src/model/: mlp.py
src/rl_env/: __init__.py  math_env.py  torch_math_env.py  train_env.py  vector_env.py
src/rl_robot/: __init__.py
src/rl_robot/algorithms/: __init__.py  (+4 more)
src/rock_env/: env.py  rock_wall.py
src/rock_generate/: env.py  rock_wall.py  trajectory.py
tests/algorithms/: test_lr_schedule.py
tests/conf/: test_hydra_config.py
tests/core/: test_core_imports.py
tests/envs/: test_math_env_smoke.py
tests/evaluation/: test_evaluation_api.py
tests/packaging/: test_legacy_paths_removed.py  test_package_layout.py  test_repository_layout.py
tests/scripts/: test_cli_help.py
tests/simulation/: test_simulation_imports.py
tests/training/: test_artifacts.py  test_eval_hooks.py  test_training_api.py
tests/utils/: test_resources.py
tools/: check_elbow_assignments.py  view_robot_pybullet.py  view_tunnel_pybullet.py
(+61 files in other folders)
