[project]
name = "rl-robot"
version = "0.1.0"
description = "RL environment for wet shotcrete robot research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "plotly>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
noise = ["opensimplex>=0.4.5"]

[tool.uv]
package = false
